--- a/src/renderer/scss/custom.scss
+++ b/src/renderer/scss/custom.scss
@@ -78,3 +78,7 @@ body {
   padding: 0;
   vertical-align: middle;
 }
+
+.table-fixed {
+  table-layout: fixed;
+}
